# SensorSim

./: .gitignore  CMakeLists.txt  Makefile  Message.cu  Message.cuh  Transport.cu  Transport.cuh  common.cuh  util.cuh
processor/: Processor.cu  Processor.cuh  processor_main.cu
sensor/: Sensor.cu  Sensor.cuh  sensor_main.cu
transport/: UDPTransport.cu  UDPTransport.cuh  iTransport.cuh  itransport.cuh  rdma_ud_transport.cu  rdma_ud_transport.cuh  udp_transport.cu  udp_transport.cuh
